...
                    imageUrl: '$baseImageUrl${movie.posterPath}',
                  ),
                  Positioned.fill(
                    child: Material(
                      color: Colors.transparent,
                      child: InkWell(
                        key: const Key('card_item_key'),
                        onTap: () {
                          Navigator.pushNamed(
                            context,
                            detailMovieRoute,
                            arguments: movie.id,
                          );
...
